// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Reports expect to render emptystate 1`] = `
<Fragment>
  <PageHeader>
    <PageHeaderTitle
      title="Compliance reports"
    />
  </PageHeader>
  <Connect(Main)>
    <StateViewWithError
      stateValues={
        Object {
          "data": Object {
            "profiles": Object {
              "edges": Array [],
            },
          },
          "error": undefined,
          "loading": undefined,
        }
      }
    >
      <StateViewPart
        stateKey="loading"
      >
        <div
          className="policies-donuts"
        >
          <Grid
            hasGutter={true}
          >
            <LoadingComplianceCards />
          </Grid>
        </div>
      </StateViewPart>
      <StateViewPart
        stateKey="data"
      >
        <div
          className="policies-donuts"
        >
          <Grid
            hasGutter={true}
          >
            <ReportCardGrid
              profiles={Array []}
            />
          </Grid>
        </div>
      </StateViewPart>
    </StateViewWithError>
  </Connect(Main)>
</Fragment>
`;

exports[`Reports expect to render loading 1`] = `
<Fragment>
  <PageHeader>
    <PageHeaderTitle
      title="Compliance reports"
    />
  </PageHeader>
  <Connect(Main)>
    <StateViewWithError
      stateValues={
        Object {
          "data": undefined,
          "error": false,
          "loading": true,
        }
      }
    >
      <StateViewPart
        stateKey="loading"
      >
        <div
          className="policies-donuts"
        >
          <Grid
            hasGutter={true}
          >
            <LoadingComplianceCards />
          </Grid>
        </div>
      </StateViewPart>
      <StateViewPart
        stateKey="data"
      >
        <div
          className="policies-donuts"
        >
          <Grid
            hasGutter={true}
          >
            <ReportCardGrid />
          </Grid>
        </div>
      </StateViewPart>
    </StateViewWithError>
  </Connect(Main)>
</Fragment>
`;

exports[`Reports expect to render without error 1`] = `
<Fragment>
  <PageHeader>
    <PageHeaderTitle
      title="Compliance reports"
    />
  </PageHeader>
  <Connect(Main)>
    <StateViewWithError
      stateValues={
        Object {
          "data": Object {
            "profiles": Object {
              "edges": Array [
                Object {
                  "node": Object {
                    "businessObjective": Object {
                      "id": "1",
                      "title": "BO 1",
                    },
                    "complianceThreshold": 1,
                    "compliantHostCount": 1,
                    "description": "profile description",
                    "id": "1",
                    "name": "profile1",
                    "refId": "121212",
                    "totalHostCount": 1,
                  },
                },
              ],
            },
          },
          "error": undefined,
          "loading": undefined,
        }
      }
    >
      <StateViewPart
        stateKey="loading"
      >
        <div
          className="policies-donuts"
        >
          <Grid
            hasGutter={true}
          >
            <LoadingComplianceCards />
          </Grid>
        </div>
      </StateViewPart>
      <StateViewPart
        stateKey="data"
      >
        <div
          className="policies-donuts"
        >
          <Grid
            hasGutter={true}
          >
            <ReportCardGrid
              profiles={
                Array [
                  Object {
                    "businessObjective": Object {
                      "id": "1",
                      "title": "BO 1",
                    },
                    "complianceThreshold": 1,
                    "compliantHostCount": 1,
                    "description": "profile description",
                    "id": "1",
                    "name": "profile1",
                    "refId": "121212",
                    "totalHostCount": 1,
                  },
                ]
              }
            />
          </Grid>
        </div>
      </StateViewPart>
    </StateViewWithError>
  </Connect(Main)>
</Fragment>
`;
